@@ -148,7 +148,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <argLine>@{surefire.jacoco.args}</argLine>
+                        <argLine>@{surefire.jacoco.args} -XX:+EnableDynamicAgentLoading</argLine>
                     </configuration>
                 </plugin>
                 <!-- jacoco coverage configuration -->
